--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ keywords = ["audio", "flucoma", "spectral", "analysis", "dsp"]
 
 [dependencies]
 flucoma-sys = { version = "0.1.0", path = "./flucoma-sys" }
+
+[dev-dependencies]
+arg = { version = "^0.4", features = ["std"] }
+wavers = "^1.5"
